--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,5 @@
-
+@import url(menu.css);
+@import url(banner.css);
 *{
     margin: 0;
     padding: 0;
@@ -27,4 +28,9 @@ header{
 
 header .contenedor {
     display: table;
+}
+
+section {
+    width: 100%;
+    margin-bottom: 25px;
 }
