--- a/css/banner.css
+++ b/css/banner.css
@@ -13,5 +13,5 @@
     top: 50%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
-    color: royalblue;
+    color: rgb(255, 255, 255);
 }
