--- a/css/banner.css
+++ b/css/banner.css
@@ -4,6 +4,7 @@
 }
 
 #banner img{
+    box-sizing: 720px;
     width: 100%;
     height: 100%;
 }
@@ -14,4 +15,22 @@
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
     color: rgb(255, 255, 255);
+}
+
+#banner h2{
+    font-size: 28px;
+}
+
+#banner a{
+    display: block;
+    width: 100px;
+    color: white;
+    text-decoration: none;
+    padding: 10px;
+    margin-top: 10px;
+    border: 3px solid #fff;
+}
+
+#banner a:hover{
+    background: rgba(51,51,51, 0.5)
 }
