--- a/css/banner.css
+++ b/css/banner.css
@@ -22,7 +22,7 @@
     font-size: 28px;
 }
 
-.banner a{
+.banner .contenedor a{
     text-align: center;
     display: inline-block;
     width: 100px;
@@ -39,7 +39,18 @@
 
 .redes-ban {
     position: absolute;
+    display: inline-block;
+    text-decoration: none;
+    text-align: center;
     top: 90%;
     left: 20%;
-}
-    
+    color: white;
+    padding: 10px 0px;
+  }
+
+A:link {text-decoration: none;
+text-align: center;
+left: 20%;}
+A:visited {color: white;  font-family: arial; text-decoration: none }
+A:hover { color: white; font-family: arial; text-decoration: none }
+*{outline:none !important;}*:focus {outline: none !important;}textarea:focus, input:focus{outline: none !important;}	a{text-decoration: none !important;outline: none !important;}
