--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,11 @@
 @import url(menu.css);
 @import url(banner.css);
+@import url(blog.css);
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 header{
