--- a/css/banner.css
+++ b/css/banner.css
@@ -23,7 +23,7 @@
     
 }
 
-.banner .contenedor a{
+.contenedor a{
     text-align: center;
     display: inline-block;
     width: 150px;
@@ -34,7 +34,7 @@
     border: 3px solid #fff;
 }
 
-.banner a:hover{
+.banner .contenedor a:hover{
     background: rgba(51,51,51, 0.5)
 }
 
@@ -44,9 +44,10 @@
     text-decoration: none;
     text-align: center;
     top: 90%;
-    left: 20%;
+    left: 40%;
     color: white;
     padding: 10px 0px;
+    font-size: 20px;
   }
 
 A:link {text-decoration: none;
