--- a/css/blog.css
+++ b/css/blog.css
@@ -1,12 +1,14 @@
 .blog .contenedor {
+    display: flex;
     text-align: center;
     justify-content: center;
     flex-wrap: wrap;
 }
 
 .blog article {
-    margin: 50px;
+    margin: 10px;
     padding: 20px;
+    width:400px;
 
 }
 
