--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @import url(menu.css);
 @import url(banner.css);
 @import url(blog.css);
+@import url(about.css);
 *{
     margin: 0;
     padding: 0;
