--- a/css/banner.css
+++ b/css/banner.css
@@ -6,35 +6,36 @@
 .banner img{
     box-sizing: 720px;
     width: 100%;
-    height: 100%;
+    height: 800px;
 }
 
-.banner .contenedor {
+.banner .content {
     text-align: center;
     position: absolute;
-    top: 50%;
+    top: 40%;
     left: 50%;
     transform: translateX(-50%) translateY(-50%);
     color: rgb(255, 255, 255);
+    line-height: 50px;
 }
 
 .banner h2{
-    font-size: 28px;
+    font-size: 45px;
+    padding: 30px;
     
 }
 
-.contenedor a{
+.content a{
     text-align: center;
     display: inline-block;
-    width: 150px;
     color: white;
     text-decoration: none;
-    padding: 10px;
-    margin-top: 10px;
+    padding: 0px 50px 0px 50px;
     border: 3px solid #fff;
+    
 }
 
-.banner .contenedor a:hover{
+.banner .content a:hover{
     background: rgba(51,51,51, 0.5)
 }
 
@@ -46,11 +47,10 @@
     top: 90%;
     left: 40%;
     color: white;
-    padding: 10px 0px;
     font-size: 20px;
   }
 
-A:link {text-decoration: none;
+.redes-ban A:link {text-decoration: none;
 text-align: center;
 left: 20%;}
 A:visited {color: white;  font-family: arial; text-decoration: none }
