--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,7 @@
 
 header{
     width: 100%;
-    height: 80px;
+    height: 100px;
     background: rgb(38, 58, 78);
     color: white;
 
@@ -26,7 +26,8 @@ header{
 }
 .logo {
     float: left;
-    margin-top: 30px;
+    margin-top: 40px;
+    margin-left: 15px;
 }
 
 header .contenedor {
