--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?99699813');
-  src: url('../font/fontello.eot?99699813#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?99699813') format('woff2'),
-       url('../font/fontello.woff?99699813') format('woff'),
-       url('../font/fontello.ttf?99699813') format('truetype'),
-       url('../font/fontello.svg?99699813#fontello') format('svg');
+  src: url('../font/fontello.eot?52700688');
+  src: url('../font/fontello.eot?52700688#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?52700688') format('woff2'),
+       url('../font/fontello.woff?52700688') format('woff'),
+       url('../font/fontello.ttf?52700688') format('truetype'),
+       url('../font/fontello.svg?52700688#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?99699813#fontello') format('svg');
+    src: url('../font/fontello.svg?52700688#fontello') format('svg');
   }
 }
 */
@@ -55,68 +55,11 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
-.icon-globe:before { content: '\e800'; } /* '' */
-.icon-twitter:before { content: '\f099'; } /* '' */
+.icon-menu:before { content: '\2630'; } /* '☰' */
+.icon-globe:before { content: '\e02f'; } /* '' */
+.icon-down-dir:before { content: '\e800'; } /* '' */
+.icon-down-dir-1:before { content: '\e801'; } /* '' */
 .icon-facebook:before { content: '\f09a'; } /* '' */
-.icon-menu:before { content: '\f0c9'; } /* '' */
-.icon-linkedin:before { content: '\f0e1'; } /* '' */
 .icon-instagram:before { content: '\f16d'; } /* '' */
-
-@font-face {
-  font-family: 'fontello';
-  src: url('../font/fontello.eot?45391887');
-  src: url('../font/fontello.eot?45391887#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?45391887') format('woff2'),
-       url('../font/fontello.woff?45391887') format('woff'),
-       url('../font/fontello.ttf?45391887') format('truetype'),
-       url('../font/fontello.svg?45391887#fontello') format('svg');
-  font-weight: normal;
-  font-style: normal;
-}
-/* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it. */
-/* Note, that will break hinting! In other OS-es font will be not as sharp as it could be */
-/*
-@media screen and (-webkit-min-device-pixel-ratio:0) {
-  @font-face {
-    font-family: 'fontello';
-    src: url('../font/fontello.svg?45391887#fontello') format('svg');
-  }
-}
-*/
- 
- [class^="icon-"]:before, [class*=" icon-"]:before {
-  font-family: "fontello";
-  font-style: normal;
-  font-weight: normal;
-  speak: never;
- 
-  display: inline-block;
-  text-decoration: inherit;
-  width: 1em;
-  margin-right: .2em;
-  text-align: center;
-  /* opacity: .8; */
- 
-  /* For safety - reset parent styles, that can break glyph codes*/
-  font-variant: normal;
-  text-transform: none;
- 
-  /* fix buttons height, for twitter bootstrap */
-  line-height: 1em;
- 
-  /* Animation center compensation - margins should be symmetric */
-  /* remove if not needed */
-  margin-left: .2em;
- 
-  /* you can be more comfortable with increased icons size */
-  /* font-size: 120%; */
- 
-  /* Font smoothing. That was taken from TWBS */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
- 
-  /* Uncomment for 3D effect */
-  /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
-}
- 
-.icon-down-open-1:before { content: '\e801'; } /* '' */
+.icon-twitter:before { content: '\f309'; } /* '' */
+.icon-linkedin:before { content: '\f318'; } /* '' */
