--- a/css/menu.css
+++ b/css/menu.css
@@ -3,8 +3,10 @@
 
 }
 
-.icon-menu {
+label{
     border: white 1px solid;
+    padding: 0px 3px;
+    border-radius: 5px;
 }
 header label {
     float: right;
@@ -20,12 +22,17 @@ header label {
     left: 0;
     width: 100%;
     height: 100vh;
-    background: #333;
+    background: rgb(38, 58, 78);
     transition: all 0.5s;
     transform: translateX(-100%);
     text-decoration: none;
     list-style:none
+    
 }
+ul, ol {
+    list-style: none;
+}
+
 
 .menu a{
     display: block;
@@ -42,6 +49,35 @@ header label {
     transform: translateX(0%);
 }
 
-li .submenu {
+.menu li ul {
+    display: none;
+    position: absolute;
+    min-width: 140px;
+}
+
+.menu li:hover >ul {
+    display: block;
+}
+
+@media (min-width:1024px) {
+    .menu{
+        position: static;
+        width: auto;
+        height: auto;
+        transform: translateX(0%);
+        float: right;
+        display: flex;
+    }
+
+    .menu a {
+        border: none;
+    }
+
+    header label {
+        display: none;
+    }
     
+    header {
+        background: none;
+    }
 }
