--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,8 @@
 @import url(banner.css);
 @import url(blog.css);
 @import url(about.css);
+@import url(work.css);
+
 *{
     margin: 0;
     padding: 0;
