--- a/css/work.css
+++ b/css/work.css
@@ -1,6 +1,7 @@
 .work{
     margin-top: 80px;
     width: 100%;
+    text-align: center;
     
 }
 .contenedor h3{
@@ -92,8 +93,8 @@ margin-left: 30px;
 }
 
 .Proyect img {
-    width: 100px;
-
+    width: 100%;
+    object-fit: contain;
 }
 
 .examples img {
