--- a/css/banner.css
+++ b/css/banner.css
@@ -61,3 +61,10 @@ left: 20%;}
 A:visited {color: white;  font-family: arial; text-decoration: none }
 A:hover { color: white; font-family: arial; text-decoration: none }
 *{outline:none !important;}*:focus {outline: none !important;}textarea:focus, input:focus{outline: none !important;}	a{text-decoration: none !important;outline: none !important;}
+
+@media (min-width:1024px) {
+    .banner {
+        padding: 0px;
+        margin-top: 0px;
+    }
+}
