--- a/css/style.css
+++ b/css/style.css
@@ -40,3 +40,9 @@ section {
     width: 100%;
     margin-bottom: 25px;
 }
+
+@media (min-width:1024px) {
+    header{
+        background-color: transparent;
+    }
+}
