--- a/css/banner.css
+++ b/css/banner.css
@@ -1,12 +1,11 @@
 .banner {
-    margin-top: 50px;
     position: relative;
-}
-
-.banner img{
-    box-sizing: 720px;
-    width: 100%;
-    height: 800px;
+    width: auto;
+    height: 900px;
+    background-image: url("../img/header-bg.jpg");
+    background-repeat: no-repeat;
+    top: 0;
+    left: 0;
 }
 
 .banner .content {
@@ -21,8 +20,8 @@
 
 .banner h2{
     font-size: 45px;
-    padding: 30px;
-    
+    margin-bottom: 20px;
+    line-height: normal;
 }
 
 .content a{
@@ -54,17 +53,36 @@ main img {
     width: auto;
     height: auto;
 }
-
-.redes-ban A:link {text-decoration: none;
-text-align: center;
-left: 20%;}
-A:visited {color: white;  font-family: arial; text-decoration: none }
-A:hover { color: white; font-family: arial; text-decoration: none }
-*{outline:none !important;}*:focus {outline: none !important;}textarea:focus, input:focus{outline: none !important;}	a{text-decoration: none !important;outline: none !important;}
-
-@media (min-width:1024px) {
+.redes-ban a{
+    color: white;
+}
+@media (min-width:500px) {
     .banner {
+        position: relative;
         padding: 0px;
         margin-top: 0px;
+        width: auto;        
+        background-size:cover;
     }
+    .banner::before {
+        position: absolute;
+        content: '';
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        background: rgba(55, 47, 85, 0.7);
+    }
+
+    
+}
+
+
+@media (max-width:500px) {
+  .banner {
+    background-image: none;
+    background-color: rgba(55,47,85, 0.7);
+        
+    }
+    
 }
