--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ header{
     height: 100px;
     background: rgb(38, 58, 78);
     color: white;
-
+    text-align: center;
     position: fixed;
     top: 0;
     left: 0;
@@ -30,6 +30,7 @@ header{
     float: left;
     margin-top: 40px;
     margin-left: 15px;
+    z-index: 100;
 }
 
 header .contenedor {
@@ -41,8 +42,17 @@ section {
     margin-bottom: 25px;
 }
 
-@media (min-width:1024px) {
+@media (min-width:600px) {
+    body{
+        width: 100%;
+        text-align: center;
+    }
     header{
         background-color: transparent;
+        position: absolute;
+    }
+    .logo{
+        position: absolute;
+        margin-left: 20%
     }
 }
