--- a/css/about.css
+++ b/css/about.css
@@ -2,20 +2,19 @@
     background: rgb(247, 247, 247);
     padding-left: 20px;
     padding-bottom: 80px;
-    
 }
-.about-us h3{
+.descrip h3{
     color: #d0a16c;
     margin-top: 20px;
 }
 
-.about-us h2{
+.descrip h2{
     color: #263a4e;
     font-size: 30px;
     margin-top: 20px;
 }
 
-.about-us h4 {
+.descrip h4 {
     margin-top: 25px;
     font-weight: normal;
     color: rgba(38, 58, 78, 0.6);
@@ -23,7 +22,7 @@
     
 }
 
-.about-us a {
+.descrip a {
     text-align: center;
     font-weight: bolder;
     display: inline-block;
@@ -37,7 +36,19 @@
 
 .about-us img {
     width: 95%;
+    max-width: 600px;
     margin-top: 80px;
     margin-bottom: 30px;
     
+}
+@media (min-width:600px){
+    .about{
+    display: flex;
+    justify-content: space-around;
+    }
+
+    .descrip{
+        text-align: left;
+        
+    }
 }
