--- a/css/style.css
+++ b/css/style.css
@@ -50,9 +50,15 @@ section {
     header{
         background-color: transparent;
         position: absolute;
+        
     }
     .logo{
         position: absolute;
         margin-left: 20%
+    }
+    
+    .banner {
+        position: relative;
+        text-align: start;
     }
 }
