--- a/css/about.css
+++ b/css/about.css
@@ -1,8 +1,16 @@
-.about {
+#about {
     background: rgb(247, 247, 247);
     padding-left: 20px;
     padding-bottom: 80px;
+    overflow: hidden;
+    
 }
+
+
+.descrip{
+    margin-top: 60px;
+}
+
 .descrip h3{
     color: #d0a16c;
     margin-top: 20px;
@@ -24,6 +32,7 @@
 
 .descrip a {
     text-align: center;
+    justify-content: center;
     font-weight: bolder;
     display: inline-block;
     width: 150px;
@@ -32,23 +41,31 @@
     padding: 15px 10px;
     margin-top: 10px;
     border: 2px solid #cea06c;
-}    
+}   
 
-.about-us img {
-    width: 95%;
-    max-width: 600px;
-    margin-top: 80px;
-    margin-bottom: 30px;
-    
-}
-@media (min-width:600px){
-    .about{
-    display: flex;
-    justify-content: space-around;
+
+@media (min-width:950px){
+
+    #about .contenedor{
+        padding-top: 100px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
     }
+    
+    #about .descrip{
+        margin-left: 50px;
+        justify-content: space-around;
+    }
+}
 
-    .descrip{
-        text-align: left;
+@media (max-width:950px){
+    .about-us img{
+        width: 100%;
+
+    }
+    #about .descrip{
+        
         
     }
 }
