--- a/css/menu.css
+++ b/css/menu.css
@@ -1,6 +1,12 @@
-#menu-bar   {
+#menu-bar{
     display: none;
-
+}
+header label{
+    float: right;
+    font-size: 28px;
+    margin: 6px 0;
+    cursor: pointer;
+    
 }
 
 label{
@@ -8,66 +14,61 @@ label{
     padding: 0px 3px;
     border-radius: 5px;
 }
-header label {
-    float: right;
-    font-size: 30px;
-    margin: 30px 15px;
-    cursor: pointer;
-    
-}
 
-.menu  {
+ul, ol,  li {
+    list-style: none;
+}
+.logo{
+    float: left;
+    margin: 10px 0;
+}
+.menu{
     position: absolute;
-    top: 75px;
+    top: 50px;
     left: 0;
     width: 100%;
     height: 100vh;
     background: rgb(38, 58, 78);
     transition: all 0.5s;
     transform: translateX(-100%);
-    text-decoration: none;
-    list-style:none
-    
 }
-ul, ol {
-    list-style: none;
-}
-
 
 .menu a{
     display: block;
-    text-align: start;
-    color: #fff;
+    color: white;
     height: 50px;
     text-decoration: none;
     padding: 15px;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
-}
-.menu a:hover{
-    background: rgb(255,255,255, 0.3);
-}
-#menu-bar:checked ~ .menu {
-    transform: translateX(0%);
-}
+    border-bottom: 1px solid rgba(
+        255, 255, 255, .5);
 
+}
 .menu li ul {
     display: none;
     position: absolute;
     min-width: 140px;
 }
-
 .menu li:hover > ul {
     display: block;
 }
+.menu a:hover{
+    background:  rgba(
+        255, 255, 255, .3);
+}
 
-@media (min-width:600px) {
+#menu-bar:checked ~ .menu {
+    transform: translateX(0%);
+}
+
+@media (min-width:950px) {
+    
     .menu{
         position: static;
         width: auto;
         height: auto;
         transform: translateX(0%);
         margin-top: 30px;
-        margin-right: 20%;
+        
         display: flex;
         float: right;
         background: transparent;
@@ -83,17 +84,58 @@ ul, ol {
     header label {
         display: none;
     }
- 
+
+
     .fondo{
         display: none;
         width: auto;
     }
-    main picture img {
-        margin-top: 0px;
-        padding: 0px;
-    }
+
     .menu a:hover{
         background: rgb(255,255,255, 0.0);
         color: #cea06c;
     }
+
+    .logo{
+        position: relative;
+        margin-top: 40px;
+    } 
+
+    #banner .contenedor{
+        position: absolute;
+        padding: auto;
+        
+        
+    }
+    
+    .content  h2{
+        width: 120px;
+        font-size: 80px;
+        padding: auto;
+        margin-top: 20px;
+        margin-bottom: 30px;
+    }
+
+    .content h3{
+        font-size: 15px;
+    }
+    
+}
+
+@media (max-width:950px){
+
+    #banner .contenedor{
+        text-align: center;
+    }
+
+    .content h2{
+        font-size: 35px;
+        padding: 20px;
+        line-height: 50px;
+    }
+    
+
+
+    
+
 }
