--- a/css/style.css
+++ b/css/style.css
@@ -3,62 +3,53 @@
 @import url(blog.css);
 @import url(about.css);
 @import url(work.css);
+@import url(client.css);
+@import url(footer.css);
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
+    
 }
 
 header{
     width: 100%;
-    height: 100px;
+    height: 50px;
     background: rgb(38, 58, 78);
     color: white;
-    text-align: center;
     position: fixed;
     top: 0;
     left: 0;
     z-index: 100;
 }
-.contenedor {
+
+.contenedor{
     width: 98%;
     margin: auto;
 }
-.logo {
-    float: left;
-    margin-top: 40px;
-    margin-left: 15px;
-    z-index: 100;
-}
 
-header .contenedor {
-    display: table;
-}
-
-section {
+section{
     width: 100%;
     margin-bottom: 25px;
 }
 
-@media (min-width:600px) {
-    body{
-        width: 100%;
-        text-align: center;
+
+@media (min-width:959px){
+
+    .contenedor {
+        width: 60%;
     }
-    header{
+ header{
+        position: absolute;
         background-color: transparent;
-        position: absolute;
-        
     }
-    .logo{
-        position: absolute;
-        margin-left: 20%
-    }
+
+}
+
+@media (max-width:959px){
+
     
-    .banner {
-        position: relative;
-        text-align: start;
-    }
+   
 }
