--- a/css/fontello.css
+++ b/css/fontello.css
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?52700688');
-  src: url('../font/fontello.eot?52700688#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?52700688') format('woff2'),
-       url('../font/fontello.woff?52700688') format('woff'),
-       url('../font/fontello.ttf?52700688') format('truetype'),
-       url('../font/fontello.svg?52700688#fontello') format('svg');
+  src: url('../font/fontello.eot?3957039');
+  src: url('../font/fontello.eot?3957039#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?3957039') format('woff2'),
+       url('../font/fontello.woff?3957039') format('woff'),
+       url('../font/fontello.ttf?3957039') format('truetype'),
+       url('../font/fontello.svg?3957039#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?52700688#fontello') format('svg');
+    src: url('../font/fontello.svg?3957039#fontello') format('svg');
   }
 }
 */
@@ -56,6 +56,7 @@
 }
  
 .icon-menu:before { content: '\2630'; } /* '☰' */
+.icon-heart-empty:before { content: '\2661'; } /* '♡' */
 .icon-globe:before { content: '\e02f'; } /* '' */
 .icon-down-dir:before { content: '\e800'; } /* '' */
 .icon-down-dir-1:before { content: '\e801'; } /* '' */
