--- a/css/work.css
+++ b/css/work.css
@@ -101,7 +101,7 @@ text-decoration: none;
 margin: 0;    
 
 height: 350px;
-background-image: url(/img/ct1.jpg);
+background-image: url(img/ct1.jpg);
 background-repeat: no-repeat;
 background-size: cover;
 background-position:center;
