--- a/css/banner.css
+++ b/css/banner.css
@@ -6,7 +6,7 @@
 #banner{
 margin: 0;
 min-height: 100vh;
-background-image: url(/img/header-bg.jpg);
+background-image: url(img/header-bg.jpg);
 background-repeat: no-repeat;
 background-size: cover;
 background-position:center;
