--- a/css/banner.css
+++ b/css/banner.css
@@ -6,7 +6,7 @@
 #banner{
 margin: 0;
 min-height: 100vh;
-background-image: url(img/header-bg.jpg);
+background-image: url(https://github.com/leoguliv3r/proyecto1/blob/73ab1c0256748ca079fb7ef28c6e55e85e3363e9/img/header-bg.jpg?raw=true);
 background-repeat: no-repeat;
 background-size: cover;
 background-position:center;
